# mapping

./: .rosbag_launch.sh.swp  .rosbag_record.sh.swp  README.md
.catkin_tools/profiles/default/: build.yaml  devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/aortascope/: .catkin  .rosinstall  setup.sh
devel/.private/calibration_ros/: .catkin  .rosinstall
devel/.private/catkin_tools_prebuild/: .catkin  setup.sh
devel/.private/gating_data_collection/: .catkin  local_setup.sh  setup.sh
devel/.private/image_acquisition_ros/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/mapping_ros/: .catkin  setup.sh
devel/.private/string_phantom_registration/: .catkin  .rosinstall  setup.sh
devel/lib/aortascope/: gating_signal_visualizer_white_pump.py  (+3 more)
logs/aortascope/: build.check.000.log.stderr
src/: .bashrc  .bashrc_backup_jan25  .~lock.IVUS robot setup - Roche Lab.odt#  .~lock.animal_protocol_FINAL.odt#  .~lock.in_vitro_aortascope_FINAL_revised.odt#  .~lock.pig_sep_10_protocol.odt#  EVAR protocol.odt  IVUS robot setup - Roche Lab.odt  Sheep_protocol_final.odt  activate_framegrabber.sh  animal_protocol_FINAL.odt  aortascope.sh  aortascope_mapping_params.yaml  aortascope_mapping_params_dissection.yaml  aortascope_tracking_params.yaml  aortascope_tracking_params_dissection.yaml  calibration_parameters_bsc_test_run.yaml  calibration_parameters_endoanchor.yaml  calibration_parameters_guidewire.yaml  calibration_parameters_ivus (3rd copy).yaml  calibration_parameters_ivus (5th copy).yaml  calibration_parameters_ivus (8th copy).yaml  calibration_parameters_ivus.yaml  calibration_parameters_ivus_0.18_mit_1.yaml  calibration_parameters_ivus_018_2.yaml  calibration_parameters_ivus_018_3.yaml  calibration_parameters_ivus_018_4 (copy).yaml  calibration_parameters_ivus_018_5.yaml  calibration_parameters_ivus_018_6.yaml  calibration_parameters_ivus_018_mgh_1.yaml  calibration_parameters_ivus_035_3.yaml  calibration_parameters_ivus_035_5.yaml  calibration_parameters_ivus_035_7.yaml  calibration_parameters_ivus_035_8.yaml  calibration_parameters_ivus_before_sheep_i_think_035_6.yaml  calibration_parameters_ivus_bsc_1.yaml  calibration_parameters_ivus_probe_2.yaml  calibration_parameters_most_recent_philips.yaml  gating_mapping_record.sh  in_vitro_aortascope_FINAL.odt  (+10 more)
src/aortascope/: .voronoi_bashrc  CMakeLists.txt
src/aortascope/launch/: aortascope.launch
src/aortascope/src/: gating_signal_visualizer_white_pump.py  mapping_parameters_gui.py  mapping_real_time.py  rgb_image_visualizer.py  temp_check.py
src/calibration_ros/: CMakeLists.txt
src/calibration_ros/launch/: calibration.launch
src/calibration_ros/src/: binary_image_visualizer.py  calibration.py  calibration_functions.py  mapping_functions.py  parameter_gui.py
src/gating_data_collection/: CMakeLists.txt  package.xml
src/image_acquisition_ros/: CMakeLists.txt  package.xml
src/mapping_ros/: CMakeLists.txt  package.xml
src/mapping_ros/launch/: mapping.launch
src/mapping_ros/src/: mapping.py  mapping_record.py  rgb_image_visualizer.py
src/string_phantom_registration/: CMakeLists.txt
src/string_phantom_registration/launch/: registration.launch
src/string_phantom_registration/src/: open3d_phantom_with_strings.stl
(+70 files in other folders)
